fixed body overflow to scroll

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -34,7 +34,7 @@ html {
 
 body {
 	min-height: 100%;
-	overflow: hidden;
+	overflow: scroll;
 	display: flex;
 	flex-direction: column;
 }
